Add XML docs and null-forgiving operator usage
Added XML documentation comments to DocumentId operator overloads for clarity. Applied null-forgiving operator to string parameters passed to DocumentSerializer.Deserialize to address nullable warnings. Enabled TreatWarningsAsErrors in the project file to enforce stricter code quality.

--- a/src/Codezerg.DocumentStore/Codezerg.DocumentStore.csproj
+++ b/src/Codezerg.DocumentStore/Codezerg.DocumentStore.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>Codezerg.DocumentStore</PackageId>
     <Version>1.0.0</Version>
