--- a/src/Codezerg.DocumentStore/Codezerg.DocumentStore.csproj
+++ b/src/Codezerg.DocumentStore/Codezerg.DocumentStore.csproj
@@ -17,6 +17,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <InternalsVisibleTo Include="Codezerg.DocumentStore.Tests" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.10" />
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="System.Text.Json" Version="9.0.10" />
